<resources>
    <string name="app_name">RecipeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
     <string name="welcome">Welcome to Food</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="your_email">Your email</string>
    <string name="password">password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="password_again">Password Again</string>
    <string name="create_account">Create an new account</string>
    <string name="get_start">Let’s Get Started</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_have_account">Don’t have a account?</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter your Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>