<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.signup.view.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/auth_button_shape"
            android:backgroundTint="@color/primaryColor"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_re_password"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:baselineAligned="false"
            android:inputType="textPassword"
            android:outlineProvider="none"
            app:boxStrokeColor="@color/primaryColor"
            app:counterTextColor="@color/primaryColor"
            app:cursorColor="@color/primaryColor"
            app:guidelineUseRtl="false"
            app:helperTextTextColor="@color/primaryColor"
            app:hintTextColor="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_create_account"
            app:placeholderTextColor="@color/primaryColor"
            app:prefixTextColor="@color/primaryColor"
            app:startIconDrawable="@drawable/ic_account"
            app:suffixTextColor="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_shape"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/your_email"
                android:textColorHint="@color/gray"
                android:textColorLink="@color/gray"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:baselineAligned="false"
            android:inputType="textPassword"
            android:outlineProvider="none"
            app:boxStrokeColor="@color/primaryColor"
            app:counterTextColor="@color/primaryColor"
            app:cursorColor="@color/primaryColor"
            app:guidelineUseRtl="false"
            app:helperTextTextColor="@color/primaryColor"
            app:hintTextColor="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:passwordToggleEnabled="true"
            app:placeholderTextColor="@color/primaryColor"
            app:prefixTextColor="@color/primaryColor"
            app:startIconDrawable="@drawable/ic_password"
            app:suffixTextColor="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_shape"
                android:fontFamily="@font/poppins"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                android:textColorLink="@color/gray"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_re_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:baselineAligned="false"
            android:inputType="textPassword"
            android:outlineProvider="none"
            app:boxStrokeColor="@color/primaryColor"
            app:counterTextColor="@color/primaryColor"
            app:cursorColor="@color/primaryColor"
            app:guidelineUseRtl="false"
            app:helperTextTextColor="@color/primaryColor"
            app:hintTextColor="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:passwordToggleEnabled="true"
            app:placeholderTextColor="@color/primaryColor"
            app:prefixTextColor="@color/primaryColor"
            app:startIconDrawable="@drawable/ic_password"
            app:suffixTextColor="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_shape"
                android:fontFamily="@font/poppins"
                android:hint="@string/re_enter_password"
                android:textColorHint="@color/gray"
                android:textColorLink="@color/gray"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_get_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/get_start"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/create_account"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_get_start" />
        <TextView
            android:id="@+id/tv_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/have_an_account"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_signup"
            app:layout_constraintHorizontal_bias="0.402"
            app:layout_constraintStart_toStartOf="@+id/btn_signup"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_in"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_have_an_account"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>